fix: Higher contrast for code highlighter

--- a/static/css/_highlight.scss
+++ b/static/css/_highlight.scss
@@ -18,8 +18,8 @@
  * Variables
  */
 
-$dt-gray-dark: #282a36; // Background
-//$dt-gray-dark: #101015; // Background
+//$dt-gray-dark: #282a36; // Background
+$dt-gray-dark: #21222c; // Background
 $dt-gray: #44475a; // Current Line & Selection
 $dt-gray-light: #f8f8f2; // Foreground
 //$dt-blue: #6272a4; // Comment
