--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -139,11 +139,11 @@ pre {
 	overflow-x: scroll;
 
 	strong {
-		background: #80000080;
+		background: #400000;
 		font-weight: 900;
 	}
 	em {
-		background: #00800060;
+		background: #003000;
 	}
 
 	* {
